// version of protocol buffer used
syntax = "proto3";

 // package name for the buffer will be used later
 package poh;

 // service which can be executed
 service PoH {
 // function which can be called
   rpc verify_attached_signature (VerifyAttachedSignatureRequest) returns (VerifyResponse);
   rpc verify_detached_signature (VerifyDetachedSignatureRequest) returns (VerifyResponse);
}

 // argument
 message VerifyAttachedSignatureRequest {
   string file_attached_signature = 1;
 }
 // argument
 message VerifyDetachedSignatureRequest {
   string detached_signature = 1;
   string file_contents = 2;
 }

 // return value
 message VerifyResponse {
   bool valid = 1;
   string info = 2;
 }
